Changed from terminal to windowed application using JavaFx also added another tab to track finished tasks